
# This file that you're in tells the Rust compiler what tools to use.

[package]
name = "optitok"
version = "0.1.0"
edition = "2021"

[lib]
name = "optitok"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }       # For max compatibility with many Python versions
rayon = "1.8"                                                                   # For parallel processing
rustc-hash = "1.1"                                                              # Fast HashMaps
fancy-regex = "0.13"                                                            # PCRE-compatible regex (needed for GPT-4 regex patterns)

[profile.release]                                                               # Provides a measurable speed boost for tokenizers
opt-level = 3
lto = "fat"
codegen-units = 1